Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nareshkasthuri.github.io/Portfolio/",
+  "homepage": "https://github.com/naresh6897/My_Portfolio/",
   "name": "naresh-portfolio-website",
   "version": "0.1.0",
   "private": true,
